--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "rules": {
+    "react/no-unescaped-entities": "off" // This turns off the rule
+  }
 }
