--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,11 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-    "extends":["next/core-web-vitals"]
+    "extends":["next/core-web-vitals"],
+    
+      "rules": {
+        "react/no-unescaped-entities": "off"
+      }
+    
+    
 }
